--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "vue-next-3.0",
-  "version": "0.1.0",
-  "private": true,
+  "name": "shangque-mobile",
+  "version": "0.0.0",
+  "license": "ISC",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src  --ext .vue,.ts",
+    "lint:fix": "eslint src --fix --ext .vue,.ts"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^3.0.0-beta.1",
-    "vue-router": "^4.0.0-alpha.7"
+    "umi-request": "^1.4.0",
+    "vant": "3",
+    "vue": "^3.2.25",
+    "vue-router": "4.0.12",
+    "vuex": "4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-alpha.0",
-    "vue-cli-plugin-vue-next": "~0.1.3"
+    "@types/node": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vite-plugin-style-import": "1.4.0",
+    "vue-tsc": "^0.29.8"
   }
 }
